# nanodiffusion

./: .gitignore  .gitmodules  README.md  pyproject.toml
datasets/: perlin.py  spiral.py  trajectory.py
notebooks/: ablation_visualization.py  data_visualize.py  dataset_visualize.ipynb  datasets.py  fashion_mnist_visualizations.py  low_dim.py  mnist_visualizations.py  pretrained.py  train.py  train_trajectory.py  train_tree.py  traj_visualizations.py  visualizations.py  voi_optimization.ipynb
scripts/: train  train_celeba.sh  train_fashion_mnist.sh  train_mnist.sh  train_trajectory.sh
src/nanodiffusion/: __init__.py  diffuser.py  distill.py  io.py  optimizers.py  schedules.py  train.py  utils.py
src/nanodiffusion/datasets/: __init__.py  oneway.py  perlin.py  trajectory.py  tree.py
src/nanodiffusion/models/: __init__.py  mlp.py  unet1d.py
src/nanogen/: compute_ot.py  data.py  diffuser.py  distill.py  io.py  optimizers.py  pipeline.py  train.py  utils.py
src/nanogen/analysis/: sampler_metrics.py  sampler_ot.py
src/nanogen/models/: __init__.py  mlp.py  unet1d.py
src/nanogen/models/diffusion/: __init__.py  mlp.py  schedules.py  unet.py
sweeps/: .trajectories.yml.swp  celeba_data_sweep.yml  celeba_ot_sweep.yml  fashion_mnist_capacity_ot_sweep.yml  fashion_mnist_capacity_sweep.yml  fashion_mnist_data_sweep.yml  fashion_mnist_ot_sweep.yml  mnist_capacity_ot_sweep.yml  mnist_capacity_ot_sweep_redo.yml  mnist_capacity_sweep.yml  mnist_data_sweep.yml  mnist_distill_sweep.yml  mnist_ot_sweep.yml  mnist_samples.yml  trajectories.yml  trajectory_data_sweep.yml  trajectory_distill_sweep.yml  trajectory_ot_sweep.yml
tests/: test_config.py  test_save_load.py
