[project]
name = "nanodiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "clearml>=1.18.0",
    "flax>=0.10.5",
    "jax[cuda]>=0.5.3",
    "kaleido==0.2.1",
    "matplotlib>=3.10.1",
    "ml-collections>=1.0.0",
    "nanoconfig",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "smalldiffusion>=0.4.3",
    "torch>=2.6.0",
]

[project.scripts]
train = "path_diffusion:train"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]

[tool.uv.workspace]
members = ["nanoconfig"]

[tool.uv.sources]
nanoconfig = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/path_diffusion"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
