[project]
name = "nanodiffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "clearml>=1.18.0",
    "kaleido==0.2.1",
    "matplotlib>=3.10.1",
    "nanoconfig",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "smalldiffusion>=0.4.3",
    "torch>=2.6.0",
]

[project.scripts]
train = "nanodiffusion:train"

[dependency-groups]
dev = [
    "clearml-agent>=1.9.3",
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["nanoconfig"]

[tool.uv.sources]
nanoconfig = { git = "https://github.com/pfrommerd/nanoconfig.git" }

[tool.hatch.build.targets.wheel]
packages = ["src/nanodiffusion"]

[tool.pyright]
venvPath = "."
venv = ".venv"
