[project]
name = "nanogen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "accelerate>=1.6.0",
    "clearml>=1.18.0",
    "kaleido==0.2.1",
    "matplotlib>=3.10.1",
    "mazelib",
    "nanoconfig",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pot>=0.9.5",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "smalldiffusion>=0.4.3",
    "torch>=2.6.0",
    "wandb>=0.19.9",
]

[project.scripts]
train = "nanogen.train:main"
distill = "nanogen.distill:main"
ot = "nanogen.analysis.sampler_ot:main"

[dependency-groups]
dev = [
    "clearml-agent>=1.9.3",
    "ipykernel>=6.29.5",
    "marimo>=0.12.10",
    "pytest>=8.3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["vendor/mazelib" ]

[tool.uv.sources]
nanoconfig = { path = "../nanoconfig", editable = true }
mazelib = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/nanogen"]

[tool.pyright]
venvPath = "."
venv = ".venv"
